# hardware-registers

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: i2c.rs  lib.rs  register_address.rs  register_size.rs  sizes.rs  spi.rs
src/i2c/: device_address.rs  register_address.rs
