[package]
name = "hardware-registers"
version = "0.2.0"
description = """
Generic, embedded-friendly hardware registers support, including
traits and types for understanding I2C registers.
"""
authors = ["Markus Mayer <widemeadows@gmail.com>"]
license = "EUPL-1.2 OR Apache-2.0 OR MIT"
homepage = "https://github.com/sunsided/hardware-registers"
repository = "https://github.com/sunsided/hardware-registers"
readme = "README.md"
edition = "2021"
rust-version = "1.64"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["registers", "hardware-registers", "i2c"]

[features]
default = ["i2c", "spi"]
std = []
i2c = []
spi = []

[dev-dependencies]
test-format = { version = "0.1.0", features = ["std"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
